force-app/main/default/objects/CNX_Products__c.object
<CustomObject>
    <fields>
        <fullName>Price_USD__c</fullName>
        <label>Price(USD)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_type__c</fullName>
        <label>Price type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-time fixed</fullName>
                </value>
                <value>
                    <fullName>Per month</fullName>
                </value>
                <value>
                    <fullName>Per year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU_code__c</fullName>
        <label>SKU code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CNX Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CNX_Products</fullName>
        <columns>NAME</columns>
        <columns>SKU_code__c</columns>
        <columns>Price_USD__c</columns>
        <columns>Price_type__c</columns>
        <filterScope>Mine</filterScope>
        <label>CNX Products</label>
    </listViews>
    <nameField>
        <label>Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CNX Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>